# testbook

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
docs/: UPDATE.md  changelog.md  conf.py  index.md  index.rst  requirements-doc.txt
docs/_static/: style.css
docs/examples/: index.md
docs/getting-started/: index.md
docs/reference/: index.rst
docs/usage/: index.md
examples/: dataframe-test.ipynb  requests-example.ipynb  requests-test.ipynb  stdout-test.ipynb  stdout_test.py
examples/dataframe-example/: dataframe-assertion-example.ipynb  dataframe_test.py
examples/requests-example/: requests_test.py
examples/stdout-example/: stdout-assertion-example.ipynb  stdout_test.py
reference/: modules.rst  nbclient.rst  nbclient.tests.rst
testbook/: __init__.py  _version.py  client.py  exceptions.py  execute.py  notebook_loader.py  patch.py  reference.py  testbook.py  testbooknode.py  translators.py  utils.py
testbook/tests/: conftest.py  test_client.py  test_datamodel.py  test_execute.py  test_inject.py  test_patch.py  test_reference.py  test_reference_allow_errors.py  test_testbook.py  test_translators.py
testbook/tests/resources/: datamodel.ipynb  exception.ipynb  foo.ipynb  inject.ipynb  patch.ipynb  reference.ipynb
